card align fix

--- a/src/components/recipe/RecipeCard.css
+++ b/src/components/recipe/RecipeCard.css
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 0 1rem;
   color: var(--ion-color-dark);
+  text-align: left;
 }
 
 .tags-container {
@@ -16,6 +17,7 @@
 }
 
 .tags-container h6 {
+  text-align: left;
   color: var(--ion-color-dark);
 }
 
